bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:5: error: ')' expected but 'if' found.
  if ( !negative && (a<0 && b>0) || (a>0 && b<0)){
  ^PosNeg:8: error: ';' expected but 'return' found.
  return(false)
  ^